--- a/.envrc
+++ b/.envrc
@@ -1,13 +1,20 @@
+# shellcheck shell=bash
+
 if ! has nix_direnv_version || ! nix_direnv_version 2.2.1; then
+  # shellcheck disable=SC1090
   source_url "https://raw.githubusercontent.com/nix-community/nix-direnv/2.2.1/direnvrc" "sha256-zelF0vLbEl5uaqrfIzbgNzJWGmLzCmYAkInj/LNxvKs="
 fi
 
 watch_file flake.nix
+watch_file devenv.nix
 watch_file flake.lock
+
+dotenv_if_exists .env
 
 DEVENV_ROOT_FILE="$(mktemp)"
 printf %s "$PWD" > "$DEVENV_ROOT_FILE"
-if ! use flake . --override-input devenv-root "file+file://$DEVENV_ROOT_FILE"
+export NIX_OPTIONS="--no-pure-eval --override-input devenv-root "file+file://$DEVENV_ROOT_FILE" --accept-flake-config"
+if ! use flake . $NIX_OPTIONS
 then
   echo "devenv could not be built. The devenv environment was not loaded. Make the necessary changes to devenv.nix and hit enter to try again." >&2
 fi
