update renovate config x2

--- a/renovate.json
+++ b/renovate.json
@@ -4,11 +4,30 @@
   "nix": {
     "enabled": true
   },
+  "lockFileMaintenance": {
+    "enabled": true,
+    "schedule": ["before 6am on monday"]
+  },
   "packageRules": [
     {
       "matchManagers": ["nix"],
       "matchDepNames": ["nixpkgs"],
-      "schedule": ["every weekend"]
+      "schedule": ["every weekend"],
+      "commitMessagePrefix": "nix(nixpkgs):",
+      "automerge": false,
+      "reviewers": ["team:maintainers"]
+    },
+    {
+      "matchManagers": ["nix"],
+      "excludeDepNames": ["nixpkgs"],
+      "schedule": ["after 10pm every weekday", "every weekend"],
+      "commitMessagePrefix": "nix:",
+      "groupName": "nix flake inputs",
+      "automerge": true,
+      "automergeType": "pr",
+      "matchUpdateTypes": ["lockFileMaintenance"]
     }
-  ]
+  ],
+  "prConcurrentLimit": 3,
+  "prHourlyLimit": 2
 }
